Fix center align

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -15,7 +15,7 @@ html, body
 
 img.medium-zoom-image
   display block
-  margin 16px 0
+  margin 16px auto
   border-radius 5px
   transition all .2s ease !important
   &:hover
